force-app/main/default/objects/obcAccount__c/obcAccount__c.object-meta.xml
<CustomObject>
    <label>Outbound Account</label>
    <nameField>
        <displayFormat>OBCA-{00000000}</displayFormat>
        <label>Outbound Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>