force-app/main/default/objects/obcAccount__c/fields/Comarch_ID__c.field-meta.xml
<CustomField>
    <fullName>Comarch_ID__c</fullName>
    <label>Comarch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>