force-app/main/default/objects/obcAccount__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>