force-app/main/default/objects/obcAccount__c/fields/Old_Email__c.field-meta.xml
<CustomField>
    <fullName>Old_Email__c</fullName>
    <label>Old Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>