force-app/main/default/objects/obcAccount__c/fields/Old_Fax__c.field-meta.xml
<CustomField>
    <fullName>Old_Fax__c</fullName>
    <label>Old Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>