force-app/main/default/objects/obcAccount__c/fields/Old_Website__c.field-meta.xml
<CustomField>
    <fullName>Old_Website__c</fullName>
    <label>Old Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>