force-app/main/default/objects/obcAccount__c/fields/Outbound_Call__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Call</label>
    <referenceTo>OutboundCall__c</referenceTo>
    <relationshipLabel>Outbound Accounts</relationshipLabel>
    <relationshipName>Outbound_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>